force-app/main/default/objects/EYI_Assignment_Group_Member__c/EYI_Assignment_Group_Member__c.object-meta.xml
<CustomObject>
    <label>Assignment Group Member</label>
    <nameField>
        <label>Assignment Group Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>