force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Active__c</fullName>
    <formula>IF(
EYI_Out_of_Office_Start__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= EYI_Out_of_Office_End__c,
FALSE,
TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>