force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Assignment_Member__c.field-meta.xml
<CustomField>
    <fullName>EYI_Assignment_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>