force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Last_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Last_Assignment_Date__c</fullName>
    <label>Last Assignment Date</label>
    <type>DateTime</type>
</CustomField>