force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Out_of_Office_End__c.field-meta.xml
<CustomField>
    <fullName>EYI_Out_of_Office_End__c</fullName>
    <label>Out of Office End</label>
    <type>Date</type>
</CustomField>