force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Out_of_Office_Start__c.field-meta.xml
<CustomField>
    <fullName>EYI_Out_of_Office_Start__c</fullName>
    <label>Out of Office Start</label>
    <type>Date</type>
</CustomField>