force-app/main/default/objects/EYI_Assignment_Group_Member__c/fields/EYI_Team_Lead_TL__c.field-meta.xml
<CustomField>
    <fullName>EYI_Team_Lead_TL__c</fullName>
    <formula>EYI_Assignment_Member__r.Manager.FirstName + &quot; &quot; +  EYI_Assignment_Member__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead (TL)</label>
    <type>Text</type>
</CustomField>