force-app/main/default/objects/EYI_Assignment_Group_Member__c/validationRules/End_Date_is_not_Less_than_Today_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_is_not_Less_than_Today_Date</fullName>
    <active>false</active>
    <errorConditionFormula>EYI_Out_of_Office_End__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>EYI_Out_of_Office_End__c</errorDisplayField>
    <errorMessage>End Date should not be less than Today date</errorMessage>
</ValidationRule>