force-app/main/default/objects/EYI_Assignment_Group_Member__c/validationRules/End_Date_must_be_Start_Date_or_later.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_Start_Date_or_later</fullName>
    <active>true</active>
    <errorConditionFormula>AND(EYI_IsAutomationBypassed__c = false, 
EYI_Out_of_Office_End__c &lt;  EYI_Out_of_Office_Start__c )</errorConditionFormula>
    <errorDisplayField>EYI_Out_of_Office_End__c</errorDisplayField>
    <errorMessage>End Date must be Start Date or later</errorMessage>
</ValidationRule>