force-app/main/default/objects/EYI_Assignment_Group_Member__c/validationRules/Start_date_must_be_today_or_later.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_must_be_today_or_later</fullName>
    <active>true</active>
    <errorConditionFormula>AND(EYI_IsAutomationBypassed__c = false,
EYI_Out_of_Office_Start__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>EYI_Out_of_Office_Start__c</errorDisplayField>
    <errorMessage>Start date must be today or later</errorMessage>
</ValidationRule>