force-app/main/default/objects/EYI_Assignment_Group_Member__c/validationRules/Start_Date_Should_not_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Should_not_greater_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>EYI_Out_of_Office_Start__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>EYI_Out_of_Office_Start__c</errorDisplayField>
    <errorMessage>Start date should not be greater than today&apos;s date.</errorMessage>
</ValidationRule>